--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "serve:ssr:cafe-management-front": "node dist/cafe-management-front/server/server.mjs"
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
@@ -21,10 +20,8 @@
     "@angular/material": "^17.1.2",
     "@angular/platform-browser": "^17.1.0",
     "@angular/platform-browser-dynamic": "^17.1.0",
-    "@angular/platform-server": "^17.1.0",
     "@angular/router": "^17.1.0",
-    "@angular/ssr": "^17.1.3",
-    "express": "^4.18.2",
+    "jwt-decode": "^4.0.0",
     "ngx-ui-loader": "^13.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -34,9 +31,7 @@
     "@angular-devkit/build-angular": "^17.1.3",
     "@angular/cli": "^17.1.3",
     "@angular/compiler-cli": "^17.1.0",
-    "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
-    "@types/node": "^18.18.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
