--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@angular/common": "^17.1.0",
     "@angular/compiler": "^17.1.0",
     "@angular/core": "^17.1.0",
+    "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^17.1.0",
     "@angular/material": "^17.1.2",
     "@angular/platform-browser": "^17.1.0",
     "@angular/platform-browser-dynamic": "^17.1.0",
     "@angular/router": "^17.1.0",
+    "@types/filesaver": "^0.0.30",
+    "file-saver": "^2.0.5",
     "jwt-decode": "^4.0.0",
     "ngx-ui-loader": "^13.0.0",
     "rxjs": "~7.8.0",
@@ -30,6 +33,7 @@
     "@angular-devkit/build-angular": "^17.1.3",
     "@angular/cli": "^17.1.3",
     "@angular/compiler-cli": "^17.1.0",
+    "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
